# plama_effect

./: .gitignore  LICENSE  README.md  plasma_effect.py  plasma_effect_render_core.py  plasma_effect_settings.txt  plasma_effect_video_recorder.py  pyproject.toml
